[gd_scene load_steps=4 format=3 uid="uid://c04740helhw8c"]

[ext_resource type="Script" uid="uid://bov60xttlcxlv" path="res://scripts/interface/escolher_modo.gd" id="1_yo0o0"]
[ext_resource type="Texture2D" uid="uid://ccm1em7gugvtu" path="res://assets/interface/selecionar_modo.png" id="2_yo0o0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yo0o0"]

[node name="escolher_modo" type="Node2D"]
script = ExtResource("1_yo0o0")

[node name="Background" type="TextureRect" parent="."]
offset_right = 972.0
offset_bottom = 2127.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_yo0o0")

[node name="modo_padrao" type="Button" parent="."]
offset_left = 46.0
offset_top = 269.0
offset_right = 340.0
offset_bottom = 363.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "MODO PADR√ÉO"
flat = true

[node name="modo_especial" type="Button" parent="."]
offset_left = 50.0
offset_top = 509.0
offset_right = 344.0
offset_bottom = 603.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "MODO ESPECIAL"
flat = true

[node name="Voltar" type="Button" parent="."]
offset_left = 15.0
offset_top = 769.0
offset_right = 73.0
offset_bottom = 828.0
flat = true

[node name="Label" type="Label" parent="."]
offset_left = 5.0
offset_top = 36.0
offset_right = 394.0
offset_bottom = 252.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/normal = SubResource("StyleBoxEmpty_yo0o0")
text = " Selecione o modo
           de jogo:"
vertical_alignment = 1
uppercase = true

[connection signal="button_up" from="modo_padrao" to="." method="_on_modo_padrao_button_up"]
[connection signal="button_up" from="modo_especial" to="." method="_on_modo_especial_button_up"]
[connection signal="button_up" from="Voltar" to="." method="_on_voltar_button_up"]
